Landing -age-coming soon

--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-Hello World
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Coming Soon</title>
+
+
+<link href="tools/style.css" rel="stylesheet" type="text/css" media="screen" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+<link href='https://fonts.googleapis.com/css?family=Bowlby+One' rel='stylesheet' type='text/css'>
+
+<meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
+
+
+</head>
+<body>
+<div class="banner">
+	
+</div>
+<div class="wrapper">
+<img src="images/autotunelogo.png">
+	<!-- 	<div class="header">
+			<h1 id="logo" style="color: #2D84BE">Autotune</h1>
+			<h2 style="color: red;font-weight: bold;">Vehicle Repair & Services</h3>
+		</div> <!-- end header -->
+		 -->
+		<div class="content-wrapper">
+			<div class="content">
+				<p class="comingsoon">Coming Soon</p>
+				<p class="main-content">Get ready! Something really cool is coming!</p>			
+			<!-- 	
+				<div class="mainform">
+					<div class="field"><input type="text" id="test" value="example@youremail.com"/></div>
+					<div class="submit"><input type="button" value="Get Notified" /></div>						
+				</div> -->
+				
+<div class="social"><a href="https://www.facebook.com/Auto-tune-105966959853118" class="facebook">facebook <i class="fa fa-facebook" aria-hidden="true"></i></a><a href="https://twitter.com/AutotuneK" class="twitter">twitter <i class="fa fa-twitter" aria-hidden="true"></i></a></div>
+			</div>
+			
+		</div><!-- end content wrapper -->
+</div>
+<script
+  src="https://code.jquery.com/jquery-2.2.4.min.js"
+  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+  crossorigin="anonymous"></script>
+</body>
+	
+	
+	
+		<script type="text/javascript">
+var placeholder = $("#test").val();
+//#0C3292
+$("#test").keydown(function() {
+    if (this.value == placeholder) {
+        this.value = '';
+    }
+}).blur(function() {
+    if (this.value == '') {
+        this.value = placeholder;
+    }
+});
+</script>
+
+</html>
