--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<div class="submit"><input type="button" value="Get Notified" /></div>						
 				</div> -->
 				
-<div class="social"><a href="https://www.facebook.com/Auto-tune-105966959853118" class="facebook">facebook <i class="fa fa-facebook" aria-hidden="true"></i></a><a href="https://twitter.com/AutotuneK" class="twitter">twitter <i class="fa fa-twitter" aria-hidden="true"></i></a></div>
+<div class="social"><a href="https://www.facebook.com/Auto-tune-105966959853118" target="_blank" class="facebook">facebook <i class="fa fa-facebook" aria-hidden="true"></i></a><a href="https://twitter.com/AutotuneK" target="_blank" class="twitter">twitter <i class="fa fa-twitter" aria-hidden="true"></i></a></div>
 			</div>
 			
 		</div><!-- end content wrapper -->
